--- a/src/SnD.Sdk.csproj
+++ b/src/SnD.Sdk.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <RootNamespace>SnD.Sdk</RootNamespace>
         <LangVersion>10</LangVersion>
+        <OutputType>Library</OutputType>
     </PropertyGroup>
 
     <ItemGroup>
@@ -35,13 +36,20 @@
         <PackageReference Include="System.Memory.Data" Version="6.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+        <None Include="README.md" Pack="true" Visible="false" PackagePath="\" />
+    </ItemGroup>
+
     <PropertyGroup>
         <PackageId>SnD.Sdk</PackageId>
         <Version>0.0.0</Version>
         <Authors>@SneaksAndData/platform-engineering</Authors>
-        <Company>Sneaks and Data</Company>
+        <Company>Sneaks&amp;Data</Company>
         <PackageDescription>C# SDK for SnD OSS Projects</PackageDescription>
         <RepositoryUrl>https://github.com/SneaksAndData/esd-services-sdk</RepositoryUrl>
+        <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+        <PackageDescription>SDK for Sneaks&amp;Data OSS Projects</PackageDescription>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
