--- a/src/SnD.Sdk.csproj
+++ b/src/SnD.Sdk.csproj
@@ -32,6 +32,7 @@
         <PackageReference Include="Serilog" Version="3.1.1" />
         <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
         <PackageReference Include="Serilog.Sinks.Datadog.Logs" Version="0.5.2" />
+        <PackageReference Include="StackExchange.Redis" Version="2.7.33" />
         <PackageReference Include="System.Memory.Data" Version="6.0.0" />
     </ItemGroup>
 
