--- a/test/SnD.Sdk.Tests.csproj
+++ b/test/SnD.Sdk.Tests.csproj
@@ -16,7 +16,9 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
     <PackageReference Include="Microsoft.Win32.Primitives" Version="4.3.0" />
     <PackageReference Include="Moq" Version="4.18.4" />
-    <PackageReference Include="xunit" Version="2.4.2" />
+    <PackageReference Include="xunit" Version="2.5.3"/>
+    <PackageReference Include="Akka.TestKit" Version="1.5.23"/>
+    <PackageReference Include="Akka.TestKit.Xunit2" Version="1.5.23"/>
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
