--- a/test/SnD.Sdk.Tests.csproj
+++ b/test/SnD.Sdk.Tests.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\SnD.Sdk.csproj" />
+    <ProjectReference Include="..\src\SnD.Sdk/SnD.Sdk.csproj" />
   </ItemGroup>
 
   <ItemGroup>
