--- a/.github/workflows/publish-public.yaml
+++ b/.github/workflows/publish-public.yaml
@@ -24,7 +24,7 @@ jobs:
         run: |
           set -e
           version=$(git describe --tags --abbrev=7 | tr -d "v")
-          sed -i "s/<Version>0.0.0/<Version>$version/" src/SnD.Sdk.csproj
+          sed -i "s/<Version>0.0.0/<Version>$version/" src/SnD.Sdk/SnD.Sdk.csproj
       - name: Import Secrets
         uses: hashicorp/vault-action@v2.7.3
         with:
@@ -35,7 +35,7 @@ jobs:
             /secret/data/common/code_signing_certificates certificate_p12 | CERT ;
             /secret/data/common/nuget_publish api_key | API_KEY ;
       - name: Build NuGet for SnD.Sdk
-        working-directory: ./src
+        working-directory: ./src/SnD.Sdk
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: |
