--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,14 +16,14 @@ jobs:
         run: |
           set -e
           version=$(git describe --tags --abbrev=7 | tr -d "v")
-          sed -i "s/<Version>0.0.0/<Version>$version/" src/SnD.Sdk.csproj
+          sed -i "s/<Version>0.0.0/<Version>$version/" src/SnD.Sdk/SnD.Sdk.csproj
       - name: Build NuGet
+        working-directory: ./src/SnD.Sdk
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: |
           set -e
           version=$(git describe --tags --abbrev=7 | tr -d "v")
-          cd src/
           dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/SneaksAndData/index.json"
           dotnet pack --configuration Release SnD.Sdk.csproj
           dotnet nuget push "bin/Release/SnD.Sdk.$version.nupkg" --source "github"
