--- a/src/SnD.Sdk/SnD.Sdk.csproj
+++ b/src/SnD.Sdk/SnD.Sdk.csproj
@@ -37,7 +37,11 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="../README.md" Pack="true" Visible="false" PackagePath="\" />
+        <None Include="README.md" Pack="true" Visible="false" PackagePath="\" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Folder Include="SnD.Sdk" />
     </ItemGroup>
 
     <PropertyGroup>
