--- a/src/SnD.Sdk.Storage.Minio/SnD.Sdk.Storage.Minio.csproj
+++ b/src/SnD.Sdk.Storage.Minio/SnD.Sdk.Storage.Minio.csproj
@@ -12,4 +12,12 @@
       <PackageReference Include="Minio" Version="5.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="README.md">
+        <Pack>true</Pack>
+        <Visible>false</Visible>
+        <PackagePath>/</PackagePath>
+      </None>
+    </ItemGroup>
+
 </Project>
