--- a/src/SnD.Sdk.Storage.Minio/SnD.Sdk.Storage.Minio.csproj
+++ b/src/SnD.Sdk.Storage.Minio/SnD.Sdk.Storage.Minio.csproj
@@ -13,6 +13,10 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="../SnD.Sdk.Extensions.Environment/SnD.Sdk.Extensions.Environment.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
       <None Update="README.md">
         <Pack>true</Pack>
         <Visible>false</Visible>
