Small fix for SnD.Sdk.Storage.Minio (#86)

--- a/src/SnD.Sdk.Storage.Minio/SnD.Sdk.Storage.Minio.csproj
+++ b/src/SnD.Sdk.Storage.Minio/SnD.Sdk.Storage.Minio.csproj
@@ -14,6 +14,14 @@
     </ItemGroup>
 
     <ItemGroup>
+        <None Include="README.md" Pack="true" Visible="false" PackagePath="\"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Folder Include="SnD.Sdk.Storage.Minio"/>
+    </ItemGroup>
+
+    <ItemGroup>
         <ProjectReference Include="../SnD.Sdk.Extensions.Environment/SnD.Sdk.Extensions.Environment.csproj" />
     </ItemGroup>
 
