--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -18,6 +18,15 @@ jobs:
           version=$(git describe --tags --abbrev=7 | tr -d "v")
           sed -i "s/<Version>0.0.0/<Version>$version/" src/SnD.Sdk/SnD.Sdk.csproj
           sed -i "s/<Version>0.0.0/<Version>$version/" src/SnD.Sdk.Storage.Minio/SnD.Sdk.Storage.Minio.csproj
+      - name: Build NuGet for SnD.Sdk.Extensions.Environment
+        working-directory: ./src/SnD.Sdk.Extensions.Environment
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        run: |
+          set -e
+          version=$(git describe --tags --abbrev=7 | tr -d "v")
+          dotnet pack --configuration Release /p:PackageVersion=$version SnD.Sdk.Extensions.Environment.csproj
+          dotnet nuget push "bin/Release/SnD.Sdk.Extensions.Environment.$version.nupkg" --source "github"
       - name: Build NuGet for SnD.Sdk
         working-directory: ./src/SnD.Sdk
         env:
