--- a/src/SnD.Sdk.Extensions.Environment/SnD.Sdk.Extensions.Environment.csproj
+++ b/src/SnD.Sdk.Extensions.Environment/SnD.Sdk.Extensions.Environment.csproj
@@ -19,7 +19,7 @@
         <Version>0.0.0</Version>
         <Authors>@SneaksAndData/platform-engineering</Authors>
         <Company>Sneaks&amp;Data</Company>
-        <PackageDescription>C# SDK for SnD OSS Projects</PackageDescription>
+        <PackageDescription>C# SDK for SnD OSS Projects. This package contains static methods for working with environment variables.</PackageDescription>
         <RepositoryUrl>https://github.com/SneaksAndData/esd-services-sdk</RepositoryUrl>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
         <PackageDescription>SDK for Sneaks&amp;Data OSS Projects</PackageDescription>
