--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -18,6 +18,7 @@ jobs:
           version=$(git describe --tags --abbrev=7 | tr -d "v")
           sed -i "s/<Version>0.0.0/<Version>$version/" src/SnD.Sdk/SnD.Sdk.csproj
           sed -i "s/<Version>0.0.0/<Version>$version/" src/SnD.Sdk.Storage.Minio/SnD.Sdk.Storage.Minio.csproj
+          sed -i "s/<Version>0.0.0/<Version>$version/" src/SnD.Sdk.Extensions.Environment/SnD.Sdk.Extensions.Environment.csproj
       - name: Build NuGet for SnD.Sdk.Extensions.Environment
         working-directory: ./src/SnD.Sdk.Extensions.Environment
         env:
