--- a/.github/workflows/publish-public.yaml
+++ b/.github/workflows/publish-public.yaml
@@ -26,6 +26,7 @@ jobs:
           version=$(git describe --tags --abbrev=7 | tr -d "v")
           sed -i "s/<Version>0.0.0/<Version>$version/" src/SnD.Sdk/SnD.Sdk.csproj
           sed -i "s/<Version>0.0.0/<Version>$version/" src/SnD.Sdk.Storage.Minio/SnD.Sdk.Storage.Minio.csproj
+          sed -i "s/<Version>0.0.0/<Version>$version/" src/SnD.Sdk.Extensions.Environment/SnD.Sdk.Extensions.Environment.csproj
       - name: Import Secrets
         uses: hashicorp/vault-action@v2.7.3
         with:
@@ -35,6 +36,27 @@ jobs:
           secrets: |
             /secret/data/common/code_signing_certificates certificate_p12 | CERT ;
             /secret/data/common/nuget_publish api_key | API_KEY ;
+
+      - name: Build NuGet for SnD.Sdk.Extensions.Environment
+        working-directory: ./src/SnD.Sdk.Extensions.Environment
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        run: |
+          set -euxo pipefail
+          version=$(git describe --tags --abbrev=7 | tr -d "v")
+          dotnet pack --configuration Release SnD.Sdk.Extensions.Environment.csproj
+
+          echo "$CERT" | base64 --decode > cert.p12
+
+          dotnet nuget sign "bin/Release/SnD.Sdk.Extensions.Environment.$version.nupkg"  \
+            --certificate-path cert.p12 \
+            --timestamper http://timestamp.digicert.com
+
+          dotnet nuget push "bin/Release/SnD.Sdk.Extensions.Environment.$version.nupkg" --api-key "$API_KEY" \
+            --source  https://api.nuget.org/v3/index.json
+
+          rm cert.p12
+
       - name: Build NuGet for SnD.Sdk
         working-directory: ./src/SnD.Sdk
         env:
