--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -18,14 +18,24 @@ jobs:
           version=$(git describe --tags --abbrev=7 | tr -d "v")
           sed -i "s/<Version>0.0.0/<Version>$version/" src/SnD.Sdk/SnD.Sdk.csproj
           sed -i "s/<Version>0.0.0/<Version>$version/" src/SnD.Sdk.Storage.Minio/SnD.Sdk.Storage.Minio.csproj
-      - name: Build NuGet for SnD.Sdk
-        working-directory: ./src/SnD.Sdk
+          sed -i "s/<Version>0.0.0/<Version>$version/" src/SnD.Sdk.Extensions.Environment/SnD.Sdk.Extensions.Environment.csproj
+      - name: Build NuGet for SnD.Sdk.Extensions.Environment
+        working-directory: ./src/SnD.Sdk.Extensions.Environment
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: |
           set -e
           version=$(git describe --tags --abbrev=7 | tr -d "v")
           dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/SneaksAndData/index.json"
+          dotnet pack --configuration Release /p:PackageVersion=$version SnD.Sdk.Extensions.Environment.csproj
+          dotnet nuget push "bin/Release/SnD.Sdk.Extensions.Environment.$version.nupkg" --source "github"
+      - name: Build NuGet for SnD.Sdk
+        working-directory: ./src/SnD.Sdk
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        run: |
+          set -e
+          version=$(git describe --tags --abbrev=7 | tr -d "v")   
           dotnet pack --configuration Release SnD.Sdk.csproj
           dotnet nuget push "bin/Release/SnD.Sdk.$version.nupkg" --source "github"
       - name: Build NuGet for SnD.Sdk.Storage.Minio
