--- a/src/SnD.Sdk.Storage.Minio/SnD.Sdk.Storage.Minio.csproj
+++ b/src/SnD.Sdk.Storage.Minio/SnD.Sdk.Storage.Minio.csproj
@@ -10,7 +10,9 @@
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0-rc.2.24473.5" />
       <PackageReference Include="Minio" Version="5.0.0" />
+      <PackageReference Include="Polly" Version="8.4.2" />
       <PackageReference Include="SnD.Sdk.Extensions.Environment" Version="1.1.10" />
     </ItemGroup>
 
